--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <img src="images/ig.png" alt="Instagram">
                         </a>
                     </div>
-                    <a href="https://drive.google.com/drive/folders/18j42QxypvfiWMVzq1My78Kx2Z_xV1Dby" download class="btn btn2">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1G-9uIHR9W7_vvKBixMpT6MNZnVqBV-bT/view?usp=drive_link" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
